HTML and CSS of header section completed.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Landing Page Project</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/video-section.css">
+    <link rel="stylesheet" href="/styles/general.css">
+    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/navbar.css">
+
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
 <body>
+<div class="header">
+  <div class="left-section">
+    <img src="/Icons/youtube-logo.svg" alt="Youtube Logo" class="youtube-logo">
+  </div>
+  <div class="middle-section">
+      <input type="text" class="search-bar" placeholder="Search">
+      <img src="/Icons/search.svg" alt="Search Icon" class="search-icon" title="Search">
+  </div>
+  <div class="right-section">
+    <img src="/Icons/upload.svg" alt="Uplaod Icon" class="icon" title="Create">
+    <img src="/Icons/youtube-apps.svg" alt="Video Icon" class="icon" title="Youtube Apps">
+    <img src="/Icons/notifications.svg" alt="Bell Icon" class="icon" title="Notifications">
+    <img src="/Icons/profile-pic-default.jpg" alt="Profile Icon" class="icon" 
+    style="border-radius: 50%" title="Your Account">
+  </div>
+</div>
 
-<div class="thumbnail-section">
-  
+<div class="thumbnail-section"> 
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="/Images/hqdefault.avif">         
+        <img class="thumbnail-image" src="/Images/hqdefault.avif" >         
       </div>
       <div class="video-info-grid">
         <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
@@ -63,7 +82,7 @@
         <div class="video-info-grid">
           <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
           <div class="text-info">
-            <div class="video-title">LLM Machines and Thier Working</div>
+            <div class="video-title">The Man Who Took LSD and Changed The World</div>
             <div class="channel-name-and-date">Veritasium </br> 1 month ago . 300k views </div>
           </div>
         </div>        
@@ -94,7 +113,7 @@
           <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
           <div class="text-info">
             <div class="video-title">LLM Machines and Thier Working</div>
-            <div class="channel-name-and-date">Veritasium </br> 1 month ago . 300k views </div>
+            <div class="channel-name-and-date">3Blue1Brown </br> 1 month ago . 300k views </div>
           </div>
         </div>
       </div>
