--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Landing Page Project</title>
-    <link rel="stylesheet" href="/styles/video-section.css">
-    <link rel="stylesheet" href="/styles/general.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="./styles/video-section.css">
+    <link rel="stylesheet" href="./styles/general.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -16,17 +16,17 @@
 <body>
 <div class="header">
   <div class="left-section">
-    <img src="/Icons/youtube-logo.svg" alt="Youtube Logo" class="youtube-logo">
+    <img src="./Icons/youtube-logo.svg" alt="Youtube Logo" class="youtube-logo">
   </div>
   <div class="middle-section">
       <input type="text" class="search-bar" placeholder="Search">
-      <img src="/Icons/search.svg" alt="Search Icon" class="search-icon" title="Search">
+      <img src="./Icons/search.svg" alt="Search Icon" class="search-icon" title="Search">
   </div>
   <div class="right-section">
-    <img src="/Icons/upload.svg" alt="Uplaod Icon" class="icon" title="Create">
-    <img src="/Icons/youtube-apps.svg" alt="Video Icon" class="icon" title="Youtube Apps">
-    <img src="/Icons/notifications.svg" alt="Bell Icon" class="icon" title="Notifications">
-    <img src="/Icons/profile-pic-default.jpg" alt="Profile Icon" class="icon" 
+    <img src="./Icons/upload.svg" alt="Uplaod Icon" class="icon" title="Create">
+    <img src="./Icons/youtube-apps.svg" alt="Video Icon" class="icon" title="Youtube Apps">
+    <img src="./Icons/notifications.svg" alt="Bell Icon" class="icon" title="Notifications">
+    <img src="./Icons/profile-pic-default.jpg" alt="Profile Icon" class="icon" 
     style="border-radius: 50%" title="Your Account">
   </div>
 </div>
