--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/navbar.css">
-
-
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
@@ -35,10 +33,10 @@
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="/Images/hqdefault.avif" >         
+        <img class="thumbnail-image" src="./Images/hqdefault.avif" >         
       </div>
       <div class="video-info-grid">
-        <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
+        <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
         <div class="text-info">
           <div class="video-title">Why Democracy is Mathematically Impossible</div>
           <div class="channel-name-and-date">Veritasium </br> 1 month ago . 300k views </div>
@@ -49,9 +47,9 @@
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="/Images/fireship-video-thumbnail.avif">   
+        <img class="thumbnail-image" src="./Images/fireship-video-thumbnail.avif">   
         <div class="video-info-grid">
-          <img class="channel-icon" src="/Images/fireship-logo.jpg">
+          <img class="channel-icon" src="./Images/fireship-logo.jpg">
           <div class="text-info">
             <div class="video-title">Tailwind CSS is the Worst...</div>
             <div class="channel-name-and-date">Fireship</br> 1 month ago . 300k views </div>
@@ -63,10 +61,10 @@
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="/Images/veritasium-game-theory-thumbnail.avif"> 
+        <img class="thumbnail-image" src="./Images/veritasium-game-theory-thumbnail.avif"> 
         </div>
         <div class="video-info-grid">
-          <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
+          <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
           <div class="text-info">
             <div class="video-title">What Game Theory Reveals About Life, The Universe, and Everything</div>
             <div class="channel-name-and-date">Veritasium </br> 1 month ago . 300k views </div>
@@ -77,10 +75,10 @@
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="/Images/hq720.avif"> 
+        <img class="thumbnail-image" src="./Images/hq720.avif"> 
       </div>
         <div class="video-info-grid">
-          <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
+          <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
           <div class="text-info">
             <div class="video-title">The Man Who Took LSD and Changed The World</div>
             <div class="channel-name-and-date">Veritasium </br> 1 month ago . 300k views </div>
@@ -91,10 +89,10 @@
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="/Images/how-hackers-thumbnail.avif"> 
+        <img class="thumbnail-image" src="./Images/how-hackers-thumbnail.avif"> 
         </div>
         <div class="video-info-grid">
-          <img class="channel-icon" src="/Images/how-hackers-logo.jpg">
+          <img class="channel-icon" src="./Images/how-hackers-logo.jpg">
           <div class="text-info">
             <div class="video-title">How Hackers Stole $1,000,000,000 From Banks</div>
             <div class="channel-name-and-date">Fern.</br> 1 month ago . 300k views </div>
@@ -110,7 +108,7 @@
           AxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBXZ7fmtyq0uP7j9FXfINS4nXU4kQ;">         
         </div>
         <div class="video-info-grid">
-          <img class="channel-icon" src="/Images/Vertiasium-Logo.jpg">
+          <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
           <div class="text-info">
             <div class="video-title">LLM Machines and Thier Working</div>
             <div class="channel-name-and-date">3Blue1Brown </br> 1 month ago . 300k views </div>
