--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 <div class="header">
   <div class="left-section">
+    <img src="./Icons/hamburger-menu.svg" alt="Hamburger Menu" class="hamburger-menu-icon">
     <img src="./Icons/youtube-logo.svg" alt="Youtube Logo" class="youtube-logo">
   </div>
   <div class="middle-section">
@@ -29,11 +30,33 @@
   </div>
 </div>
 
+<div class="sidebar">
+  <div class="sidebar-icon-container">
+    <img src="./Icons/home.svg" alt="Home" class="sidebar-icon">
+    <p>Home</p>
+  </div>
+  <div class="sidebar-icon-container">
+    <img src="./Icons/explore.svg" alt="Explore" class="sidebar-icon">
+    <p>Explore</p>
+  </div>
+  <div class="sidebar-icon-container">
+    <img src="./Icons/subscriptions.svg" alt="Subscriptions" class="sidebar-icon">
+    <p>Subscriptions</p>
+  </div>
+  <div class="sidebar-icon-container">
+    <img src="./Icons/library.svg" alt="Library" class="sidebar-icon">
+    <p>Library</p>
+  </div>
+</div>
+
 <div class="thumbnail-section"> 
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="./Images/hqdefault.avif" >         
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+          <img class="thumbnail-image" src="./Images/hqdefault.avif" >
+        </a>
+        <div class="video-time">12:43</div>       
       </div>
       <div class="video-info-grid">
         <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
@@ -47,7 +70,11 @@
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="./Images/fireship-video-thumbnail.avif">   
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+          <img class="thumbnail-image" src="./Images/fireship-video-thumbnail.avif">
+        </a>   
+        <div class="video-time">08:33</div> 
+      </div> 
         <div class="video-info-grid">
           <img class="channel-icon" src="./Images/fireship-logo.jpg">
           <div class="text-info">
@@ -57,12 +84,14 @@
         </div>      
       </div>
     </div>
-  </div>
   <div class="container-container">
     <div class="thumbnail-container">
       <div class="thumbnail">
-        <img class="thumbnail-image" src="./Images/veritasium-game-theory-thumbnail.avif"> 
-        </div>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+          <img class="thumbnail-image" src="./Images/veritasium-game-theory-thumbnail.avif">
+        </a>
+        <div class="video-time">12:21</div>  
+      </div>
         <div class="video-info-grid">
           <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
           <div class="text-info">
@@ -76,7 +105,8 @@
     <div class="thumbnail-container">
       <div class="thumbnail">
         <img class="thumbnail-image" src="./Images/hq720.avif"> 
-      </div>
+        <div class="video-time">13:11</div> 
+      </div> 
         <div class="video-info-grid">
           <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
           <div class="text-info">
@@ -90,7 +120,8 @@
     <div class="thumbnail-container">
       <div class="thumbnail">
         <img class="thumbnail-image" src="./Images/how-hackers-thumbnail.avif"> 
-        </div>
+        <div class="video-time">09:12</div>  
+      </div> 
         <div class="video-info-grid">
           <img class="channel-icon" src="./Images/how-hackers-logo.jpg">
           <div class="text-info">
@@ -105,7 +136,8 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <img class="thumbnail-image" src="https://i.ytimg.com/vi/wjZofJX0v4M/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qp
-          AxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBXZ7fmtyq0uP7j9FXfINS4nXU4kQ;">         
+          AxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBXZ7fmtyq0uP7j9FXfINS4nXU4kQ;">
+          <div class="video-time">16:25</div>          
         </div>
         <div class="video-info-grid">
           <img class="channel-icon" src="./Images/3blue1brown-logo.jpg">
@@ -119,7 +151,8 @@
     <div class="container-container">
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img class="thumbnail-image" src="./Images/hqdefault.avif" >         
+          <img class="thumbnail-image" src="./Images/hqdefault.avif" >   
+          <div class="video-time">12:43</div>        
         </div>
         <div class="video-info-grid">
           <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
@@ -133,7 +166,9 @@
     <div class="container-container">
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img class="thumbnail-image" src="./Images/fireship-video-thumbnail.avif">   
+          <img class="thumbnail-image" src="./Images/fireship-video-thumbnail.avif">
+          <div class="video-time">08:23</div>  
+        </div>     
           <div class="video-info-grid">
             <img class="channel-icon" src="./Images/fireship-logo.jpg">
             <div class="text-info">
@@ -143,12 +178,12 @@
           </div>      
         </div>
       </div>
-    </div>
     <div class="container-container">
       <div class="thumbnail-container">
         <div class="thumbnail">
           <img class="thumbnail-image" src="./Images/veritasium-game-theory-thumbnail.avif"> 
-          </div>
+          <div class="video-time">12:21</div>  
+        </div>
           <div class="video-info-grid">
             <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
             <div class="text-info">
@@ -162,7 +197,8 @@
       <div class="thumbnail-container">
         <div class="thumbnail">
           <img class="thumbnail-image" src="./Images/hq720.avif"> 
-        </div>
+          <div class="video-time">13:11</div>  
+        </div> 
           <div class="video-info-grid">
             <img class="channel-icon" src="./Images/Vertiasium-Logo.jpg">
             <div class="text-info">
@@ -175,23 +211,24 @@
     <div class="container-container">
       <div class="thumbnail-container">
         <div class="thumbnail">
-          <img class="thumbnail-image" src="./Images/how-hackers-thumbnail.avif"> 
-          </div>
+          <img class="thumbnail-image" src="./Images/how-hackers-thumbnail.avif">
+          <div class="video-time">09:12</div>   
+        </div> 
           <div class="video-info-grid">
             <img class="channel-icon" src="./Images/how-hackers-logo.jpg">
             <div class="text-info">
               <div class="video-title">How Hackers Stole $1,000,000,000 From Banks</div>
               <div class="channel-name-and-date">Fern.</br> 1 month ago . 300k views </div>
             </div>
-          </div>        
-  
+          </div>         
       </div>
     </div>
       <div class="container-container">
         <div class="thumbnail-container">
           <div class="thumbnail">
             <img class="thumbnail-image" src="https://i.ytimg.com/vi/wjZofJX0v4M/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qp
-            AxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBXZ7fmtyq0uP7j9FXfINS4nXU4kQ;">         
+            AxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBXZ7fmtyq0uP7j9FXfINS4nXU4kQ;">
+            <div class="video-time">16:25</div>           
           </div>
           <div class="video-info-grid">
             <img class="channel-icon" src="./Images/3blue1brown-logo.jpg">
